--- a/index.html
+++ b/index.html
@@ -4,10 +4,50 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Interactive Rating Component</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&family=Overpass:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div id="app"></div>
+    <main class="container">
+      <div class="card" id="rating">
+        <div class="icon">
+          <img src="images/icon-star.svg" alt="star-icon">
+        </div>
+        <div class="text">
+          <h2>How did we do?</h2>
+          <p>Please let us know how we did with your support request. All feedback is appreciated 
+            to help us improve our offering!</p>
+        </div>
+        <div class="num-list">
+          <a href="" class="num-item">1</a>
+          <a href="" class="num-item">2</a>
+          <a href="" class="num-item">3</a>
+          <a href="" class="num-item">4</a>
+          <a href="" class="num-item">5</a>
+        </div>
+        <div class="btn-submit">
+          <button>Submit</button>
+        </div>
+      </div>
+      <div class="card" id="thanks">
+        <div class="ilustration">
+          <img src="images/illustration-thank-you.svg" alt="ticket-thanks">
+        </div>
+        <div class="section">
+          <h4>You selected <!-- Add rating here --> out of 5</h4>
+        </div>
+        <div class="text-thank">
+          <h2>Thank you!</h2>
+          <p>We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!</p>
+        </div>
+      </div>
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Your Name Here</a>.
+      </div>
+    </main>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
