rating card styles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main class="container">
       <div class="card" id="rating">
         <div class="icon">
-          <img src="images/icon-star.svg" alt="star-icon">
+          <svg width="17" height="16" xmlns="http://www.w3.org/2000/svg"><path d="m9.067.43 1.99 4.031c.112.228.33.386.58.422l4.45.647a.772.772 0 0 1 .427 1.316l-3.22 3.138a.773.773 0 0 0-.222.683l.76 4.431a.772.772 0 0 1-1.12.813l-3.98-2.092a.773.773 0 0 0-.718 0l-3.98 2.092a.772.772 0 0 1-1.119-.813l.76-4.431a.77.77 0 0 0-.222-.683L.233 6.846A.772.772 0 0 1 .661 5.53l4.449-.647a.772.772 0 0 0 .58-.422L7.68.43a.774.774 0 0 1 1.387 0Z" fill="#FC7614"/></svg>
         </div>
         <div class="text">
           <h2>How did we do?</h2>
@@ -28,7 +28,7 @@
           <a href="" class="num-item">5</a>
         </div>
         <div class="btn-submit">
-          <button>Submit</button>
+          <button>SUBMIT</button>
         </div>
       </div>
       <div class="card" id="thanks">
@@ -38,7 +38,7 @@
         <div class="section">
           <h4>You selected <!-- Add rating here --> out of 5</h4>
         </div>
-        <div class="text-thank">
+        <div class="text">
           <h2>Thank you!</h2>
           <p>We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!</p>
         </div>
