--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
               to help us improve our offering!</p>
           </div>
           <div class="num-list">
-            <a href="" class="num-item">1</a>
-            <a href="" class="num-item">2</a>
-            <a href="" class="num-item">3</a>
-            <a href="" class="num-item">4</a>
-            <a href="" class="num-item">5</a>
+            <a href="#" class="num-item">1</a>
+            <a href="#" class="num-item">2</a>
+            <a href="#" class="num-item">3</a>
+            <a href="#" class="num-item">4</a>
+            <a href="#" class="num-item">5</a>
           </div>
           <div class="btn-submit">
             <button>SUBMIT</button>
