--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
       <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Your Name Here</a>.
+        Coded by <a href="https://github.com/Yuniski/interactive-rating-component" target="_blank" rel="noopener">Niki Bear 🐻🚀</a>.
       </div>
     </main>
     <script type="module" src="/main.js"></script>
