--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
         </div>
       </div>
       <div class="card" id="thanks">
+        <div class="semi-circle"></div>
         <div class="ilustration">
           <img src="images/illustration-thank-you.svg" alt="ticket-thanks">
         </div>
-        <div class="section">
+        <div class="selected">
           <h4>You selected <!-- Add rating here --> out of 5</h4>
         </div>
         <div class="text">
