--- a/index.html
+++ b/index.html
@@ -10,48 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&family=Overpass:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <main class="container">
-      <div class="card" id="rating">
-        <div class="semi-circle"></div>
-        <div class="card-content">
-          <div class="icon">
-            <svg width="17" height="16" xmlns="http://www.w3.org/2000/svg"><path d="m9.067.43 1.99 4.031c.112.228.33.386.58.422l4.45.647a.772.772 0 0 1 .427 1.316l-3.22 3.138a.773.773 0 0 0-.222.683l.76 4.431a.772.772 0 0 1-1.12.813l-3.98-2.092a.773.773 0 0 0-.718 0l-3.98 2.092a.772.772 0 0 1-1.119-.813l.76-4.431a.77.77 0 0 0-.222-.683L.233 6.846A.772.772 0 0 1 .661 5.53l4.449-.647a.772.772 0 0 0 .58-.422L7.68.43a.774.774 0 0 1 1.387 0Z" fill="#FC7614"/></svg>
-          </div>
-          <div class="text">
-            <h2>How did we do?</h2>
-            <p>Please let us know how we did with your support request. All feedback is appreciated 
-              to help us improve our offering!</p>
-          </div>
-          <div class="num-list">
-            <a href="#" class="num-item">1</a>
-            <a href="#" class="num-item">2</a>
-            <a href="#" class="num-item">3</a>
-            <a href="#" class="num-item">4</a>
-            <a href="#" class="num-item">5</a>
-          </div>
-          <div class="btn-submit">
-            <button>SUBMIT</button>
-          </div>
-        </div>
-      </div>
-      <div class="card" id="thanks">
-        <div class="semi-circle"></div>
-        <div class="ilustration">
-          <img src="images/illustration-thank-you.svg" alt="ticket-thanks">
-        </div>
-        <div class="selected">
-          <h4>You selected <!-- Add rating here --> out of 5</h4>
-        </div>
-        <div class="text">
-          <h2>Thank you!</h2>
-          <p>We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!</p>
-        </div>
-      </div>
-      <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="https://github.com/Yuniski/interactive-rating-component" target="_blank" rel="noopener">Niki Bear 🐻🚀</a>.
-      </div>
-    </main>
+    <main class="container" id="app"></main>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
